# metaltask

./: Cargo.toml  Makefile  README.md  design.drawio
.github/workflows/: ci.yml  release.yml
script/: build.sh  install.sh
src/: main.rs
src/arg/: arg.rs  arg_test.rs
src/config/: config.rs  config.yml  config_test.rs
src/flow/: build.rs  flow.proto  flow.rs  flow_test.rs  mod.rs
src/task/: mod.rs  task.rs  task_test.rs
