# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "metaltask"
version = "0.0.2"
edition = "2021"
authors = ["Jia Jia <angersax@sina.com>"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
description = "Metal task in Rust"
repository = "https://github.com/craftslab/metaltask"
documentation = "https://github.com/craftslab/metaltask"
homepage = "https://github.com/craftslab/metaltask"
keywords = ["metal", "task", "rust"]
categories = ["task"]
license = "MIT"
readme = "README.md"
build = "src/flow/build.rs"

[[bin]]
name = "metaltask"
path = "src/main.rs"

[dependencies]
clap = "3.0.0-beta.4"
prost = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
tokio = {version = "1.12.0", features = ["rt-multi-thread"]}
tonic = "0.6.1"

[build-dependencies]
tonic-build = "0.6.0"

[badges]
maintenance = { status = "actively-developed" }
