# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "metaltask"
version = "1.4.0"
edition = "2021"
rust-version = "1.59"
authors = ["Jia Jia <angersax@sina.com>"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
description = "Metal task in Rust"
repository = "https://github.com/devops-metalflow/metaltask"
documentation = "https://github.com/devops-metalflow/metaltask"
homepage = "https://github.com/devops-metalflow/metaltask"
keywords = ["metal", "task", "rust"]
categories = ["task"]
license = "MIT"
readme = "README.md"
build = "src/flow/build.rs"

[[bin]]
name = "metaltask"
path = "src/main.rs"

[profile.release]
strip = "debuginfo"

[dependencies]
chrono = "0.4.19"
clap = "3.0.0-beta.4"
prost = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
tokio = {version = "1.12.0", features = ["rt-multi-thread"]}
tonic = "0.6.1"

[build-dependencies]
tonic-build = "0.6.0"

[badges]
maintenance = { status = "actively-developed" }
